Correccion de Swagger
